[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libraryapi"
version = "0.2.0"
description = "Python SDK for libraryapi.dev — US public library facility, hours, services, and statistics data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["public library", "libraries", "imls", "pls", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage      = "https://libraryapi.dev"
Documentation = "https://libraryapi.dev/docs"
Repository    = "https://github.com/library-api/libraryapi-python"
"Bug Tracker" = "https://github.com/library-api/libraryapi-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/libraryapi"]
